<resources>
    <string name="app_name">My Love Beverage</string>
    <string name="warehouse">Manage Warehouse</string>
    <string name="product">Manage Product</string>
    <string name="Invoice">Manage Invoice</string>
    <string name="Expense">Manage Expense</string>
    <string name="Supplier">Manage Supplier</string>
    <string name="Staff">Manage Staff</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="statistic">Statistic</string>
    <string name="hotline">Hotline</string>
    <string name="logout">Log Out</string>
    <string name="aboutus">About Us</string>
    <string-array name="other_expense">
        <item>Electricity</item>
        <item>Water</item>
        <item>Wifi</item>
    </string-array>
    <string-array name="status">
        <item>Verified</item>
        <item>Pending</item>
    </string-array>
    <string-array name="paymentmethod">
        <item>Cash</item>
        <item>Credit Card</item>
        <item>Momo</item>
        <item>VN PAY</item>
    </string-array>
    <string-array name="type_statistic">
        <item>Electricity</item>
        <item>Water</item>
        <item>Wifi</item>
        <item>Salary</item>
        <item>Warehouse</item>
        <item>Revenue</item>
        <item>Profit</item>
    </string-array>
    <string-array name="type_position">
        <item>Manager</item>
        <item>Bartender</item>
        <item>Waitress</item>
        <item>Security</item>
        <item>Order</item>
    </string-array>
    <string-array name="type_notification_position">
        <item>All</item>
        <item>Bartender</item>
        <item>Waitress</item>
        <item>Security</item>
        <item>Order</item>
    </string-array>
    <string-array name="type_status_working">
        <item>active</item>
        <item>inactive</item>
    </string-array>
    <string-array name="type_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>